# ticket-similarity-rag

./: .gitignore  docker-compose.yml  pyproject.toml  readme.md
src/config/: settings.py
src/ingestion/: ingest.py  pii.py  run_ingestion.py
src/retreival/: search_tickets.py
src/ticket_similarity/app/: streamlit_app.py
src/ticket_similarity/cli/: demo_inputs.py  triage_cli.py
src/ticket_similarity/embeddings/: embeddings.py
src/ticket_similarity/ingestion/: ingest.py  normalize.py  normalize_lite.py  run_ingestion.py
src/ticket_similarity/retrieval/: area_inference.py  confidence.py  pair_inference.py  pipeline.py  reranker.py  search_tickets.py  subarea_inference.py
src/ticket_similarity/vectorstore/: index_tickets.py  qdrant_store.py
src/vectorstore/: index_tickets.py
