[project]
name = "ticket-similarity-rag"
version = "0.1.0"
description = "Local ticket similarity RAG POC"
authors = [
  { name = "Shourya Mangal", email = "shouryamangal@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
  "pandas>=2.2.2,<2.3.0",
  "openpyxl>=3.1.2,<4.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "regex>=2024.0.0,<2027.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "qdrant-client (>=1.17.0,<2.0.0)",
  "sentence-transformers (>=5.2.3,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "ticket_similarity", from = "src" }]